    the local IP address to which a client connected.
58) Allow winbindd to match local accounts to domain SID when 
    'winbind trusted domains only = yes' (bug 680).
59) Remove code in idmap_ldap that searches the user suffix and group 
    suffix.  It's not needed and provides inconsistent functionality 
    from the tdb backend.
    
    
Changes since 3.0.0
-------------------

Modified parameters
  * mangled map (deprecated)
  
Removed Parameters
  * mangled stack (unused)


1)  Change the interface for init_unistr2 to not take a length 
    but a flags field.  We were assuming that 
    2*strlen(mb_string) == length of ucs2-le string.  (bug 480).
2)  Allow d_printf() to handle strings with escaped quotation 
    marks since the msg file includes the escape character (bug 489).
3)  Fix bad html table row termination in SWAT wizard code (bug 413).
4)  Fix to parse the level-2 strings.
5)  Fix for "valid users = %S" in [homes].  Fix read/write 
    list as well. 
6)  Change AC_CHECK_LIB_EXT to prepend libraries instead of append.  
    This is the same way AC_CHECK_LIB works (bug 508).
7)  Testparm output fixes for clarity.
8)  Fix broken wins hook functionality -- i18n bug (bug 528).
9)  Take care of condition where DOS and NT error codes must differ.
10) Default to using only built-in charsets when a working iconv 
    implementation cannot be located.
11) Wrap internals of sys_setgroups() so the sys_XX() call can 
    be done unconditionally (bug 550).
12) Remove duplicate smbspool link on SWAT's front page (bug 541).
13) Save and restore CFLAGS before/after AC_PROG_CC.  Ensures that
    --enable-debug=[yes|no] works correctly.
14) Allow ^C to interrupt smbpasswd if using our getpass 
    (e.g. smbpasswd command).
15) Support signing only on RPC's (bug 167).
16) Correct bug that prevented  Excel 2000 clients from opening 
    files marked as read-only.
17) Portability fix bugs 546 - 549).
18) Explicitly initialize the value of AR for vendor makes that don't