@@ -28,16 +28,16 @@ done
 # Install images
 for ln in $LANGS; do
 
-for f in $SRCDIR../swat/$ln/images/*.gif; do
+  for f in $SRCDIR../swat/$ln/images/*.gif; do
       FNAME=$SWATDIR/$ln/images/`basename $f`
       echo $FNAME
       cp $f $FNAME || echo Cannot install $FNAME. Does $USER have privileges?
       chmod 0644 $FNAME
-done
+  done
 
-# Install html help
+  # Install html help
 
-for f in $SRCDIR../swat/$ln/help/*.html; do
+  for f in $SRCDIR../swat/$ln/help/*.html; do
       FNAME=$SWATDIR/$ln/help/`basename $f`
       echo $FNAME
       if [ "x$BOOKDIR" = "x" ]; then
@@ -49,6 +49,17 @@ for f in $SRCDIR../swat/$ln/help/*.html; do
       cp $f $FNAME || echo Cannot install $FNAME. Does $USER have privileges?
       rm -f $f
       chmod 0644 $FNAME
+  done
+
+  # Install "server-side" includes
+
+  for f in $SRCDIR../swat/$ln/include/*.html; do
+      FNAME=$SWATDIR/$ln/include/`basename $f`
+      echo $FNAME
+      cp $f $FNAME || echo Cannot install $FNAME. Does $USER have privileges?
+      chmod 0644 $FNAME
+  done
+
 done
 
 # Install html documentation
@@ -58,17 +69,6 @@ for f in $SRCDIR../docs/htmldocs/*.html; do
       echo $FNAME
       cp $f $FNAME || echo Cannot install $FNAME. Does $USER have privileges?
       chmod 0644 $FNAME
-done
-
-# Install "server-side" includes
-
-for f in $SRCDIR../swat/$ln/include/*.html; do
-      FNAME=$SWATDIR/$ln/include/`basename $f`
-      echo $FNAME
-      cp $f $FNAME || echo Cannot install $FNAME. Does $USER have privileges?
-      chmod 0644 $FNAME
-done
-
 done
 
 # Install Using Samba book (but only if it is there)
